FIX: code block white space

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -20,6 +20,7 @@ green     #859900  operators, other keywords
     background-color: #eef;
     color: #586e75;
     overflow-x: auto;
+    margin-bottom: 1.25rem;
 
     pre {
         background-color: #eef;
